Support middle clicking of Back/Forward/Up/Home toolbar buttons

This opens the resulting page in a new tab.

BUG: 358649

Differential Revision: https://phabricator.kde.org/D7390